--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -47,3 +47,7 @@ tasks:
   show-er:
     desc: Migrate database
     cmd: atlas schema inspect -u "mysql://root:root@localhost:3306/isuconp?charset=utf8mb4&parseTime=true&loc=Local" --web
+
+  show-gr:
+    desc: Show ER diagram
+    cmd: echo "http://localhost:3011"
