--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -5,4 +5,12 @@ scrape_configs:
   - job_name: 'prometheus'
     scrape_interval: 5s
     static_configs:
-      - targets: ['localhost:9090']
+      - targets: ['prometheus:9090']
+  - job_name: 'nginx'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['nginx-exporter:9113']
+  - job_name: 'mysql'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['mysqld-exporter:9104']
