--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -2,11 +2,14 @@ name: private-isu
 services:
   nginx:
     image: nginx:1.26
+    container_name: nginx
     depends_on:
       - app
     volumes:
       - ./etc/nginx/conf.d:/etc/nginx/conf.d
       - ./public:/public
+      # NGINXのコンフィグファイルをホストOSから、ゲストOSに連結する
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
     networks:
@@ -40,6 +43,7 @@ services:
 
   mysql:
     image: mysql:8.4
+    container_name: mysql
     environment:
       #- "TZ=Asia/Tokyo"
       - "MYSQL_ROOT_HOST=%"
@@ -90,14 +94,46 @@ services:
      mysql:
         condition: service_healthy
 
+  nginx-exporter:
+    build: ./nginx-exporter
+    container_name: nginx-exporter
+    ports:
+      - "9113:9113"
+    restart: unless-stopped
+    entrypoint: nginx-prometheus-exporter -nginx.scrape-uri=http://nginx/nginx_status
+    networks:
+      - my_network
+    depends_on:
+      - nginx
+
+  mysqld-exporter:
+    image: prom/mysqld-exporter
+    container_name: mysqld-exporter
+    volumes:
+      - ./.my.cnf:/etc/.my.cnf
+    command:
+      - '--config.my-cnf=/etc/.my.cnf'
+    environment:
+      DATA_SOURCE_NAME: "root:root@tcp(mysql:3306)/performance_schema"
+    networks:
+      - my_network
+    depends_on:
+      - mysql
+    ports:
+      - "9104:9104"
+
   prometheus:
    image: prom/prometheus
    container_name: prometheus
+   networks:
+      - my_network
    ports:
      - '9090:9090'
    volumes:
      - '../prometheus/prometheus.yml:/etc/prometheus/prometheus.yml'
      - 'prometheus-data:/prometheus'
+   command:
+     - '--config.file=/etc/prometheus/prometheus.yml'
 
 volumes:
   mysql:
