--- a/grafana/datasources/datasource.yml
+++ b/grafana/datasources/datasource.yml
@@ -13,3 +13,25 @@ datasources:
       connMaxLifetime: 14400
     secureJsonData:
       password: root
+
+  - name: Prometheus
+    type: prometheus
+    access: proxy
+    # Access mode - proxy (server in the UI) or direct (browser in the UI).
+    url: http://prometheus:9090
+    jsonData:
+      httpMethod: POST
+      manageAlerts: true
+      prometheusType: Prometheus
+      prometheusVersion: 2.44.0
+      cacheLevel: 'High'
+      disableRecordingRules: false
+      incrementalQueryOverlapWindow: 10m
+      exemplarTraceIdDestinations:
+
+  - name: Grafana Pyroscope
+    type: grafana-pyroscope-datasource
+    uid: Pyroscope
+    url: http://pyroscope:4040
+    editable: true
+    isDefault: false
