--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -14,3 +14,7 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ['mysqld-exporter:9104']
+      - targets: ['localhost:9090']
+  - job_name: 'node'
+    static_configs:
+      - targets: ["node-exporter:9100"]
