--- a/webapp/nginx/default.conf
+++ b/webapp/nginx/default.conf
@@ -1,16 +1,18 @@
 server {
-    listen 80;
-    server_name localhost;
+  listen 80;
 
-    location / {
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-    }
+  client_max_body_size 10m;
+  root /public/;
 
-    location /nginx_status {
-        stub_status on;
-        access_log off;
-        allow all;
-        # deny all;
-    }
+  location / {
+    proxy_set_header Host $host;
+    proxy_pass http://app:8080;
+  }
+
+  location /nginx_status {
+    stub_status on;
+    access_log off;
+    allow all;
+    # deny all;
+  }
 }
