--- a/grafana/datasources/datasource.yml
+++ b/grafana/datasources/datasource.yml
@@ -3,7 +3,7 @@ apiVersion: 1
 datasources:
   - name: MySQL
     type: mysql
-    url: mysql:3306
+    url: http://mysql:3306
     user: root
     jsonData:
       database: isuconp
