--- a/webapp/nginx/default.conf
+++ b/webapp/nginx/default.conf
@@ -1,18 +1,34 @@
+log_format json escape=json '{'
+                            '"time":"$time_iso8601",'
+                            '"host":"$remote_addr",'
+                            '"port":"$remote_port",'
+                            '"method":"$request_method",'
+                            '"uri":"$request_uri",'
+                            '"status":"$status",'
+                            '"body_bytes":"$body_bytes_sent",'
+                            '"referer":"$http_referer",'
+                            '"ua":"$http_user_agent",'
+                            '"request_time":"$request_time",'
+                            '"respons_time":"$upstream_response_time"'
+                            '}';
 server {
-  listen 80;
+    listen 80;
 
-  client_max_body_size 10m;
-  root /public/;
+    client_max_body_size 10m;
+    root /public/;
 
-  location / {
-    proxy_set_header Host $host;
-    proxy_pass http://app:8080;
-  }
+    location / {
+        proxy_set_header Host $host;
+        proxy_pass http://app:8080;
+    }
 
-  location /nginx_status {
-    stub_status on;
-    access_log off;
-    allow all;
-    # deny all;
-  }
+    location /nginx_status {
+        stub_status on;
+        access_log on;
+        allow 127.0.0.1;
+        allow 172.18.0.0/16;
+        allow 192.168.0.0/16;
+        allow 172.19.0.0/16;
+    }
+    access_log /var/log/nginx/access.log json;
 }
