--- a/webapp/golang/Dockerfile
+++ b/webapp/golang/Dockerfile
@@ -1,6 +1,4 @@
-# syntax=docker/dockerfile:1
-
-FROM --platform=$BUILDPLATFORM golang:1.23 AS build
+FROM golang:1.24 AS build
 WORKDIR /src
 
 RUN --mount=type=cache,target=/go/pkg/mod/ \
