--- a/grafana/datasources/datasource.yml
+++ b/grafana/datasources/datasource.yml
@@ -35,3 +35,11 @@ datasources:
     url: http://pyroscope:4040
     editable: true
     isDefault: false
+
+  - name: Loki
+    type: loki
+    access: proxy
+    url: http://loki:3100
+    jsonData:
+      timeout: 60
+      maxLines: 1000
