--- a/.github/workflows/ci-atlas.yaml
+++ b/.github/workflows/ci-atlas.yaml
@@ -5,10 +5,10 @@ on:
       - master
     paths:
       - .github/workflows/ci-atlas.yaml
-      - 'migrations/*'
+      - 'webapp/golang/migrations/*'
   pull_request:
     paths:
-      - 'migrations/*'
+      - 'webapp/golang/migrations/*'
 # Permissions to write comments on the pull request.
 permissions:
   contents: read
@@ -41,7 +41,7 @@ jobs:
           cloud-token: '${{ secrets.ATLAS_CLOUD_TOKEN }}'
       - uses: ariga/atlas-action/migrate/lint@v1
         with:
-          dir: 'file://migrations'
+          dir: 'file://webapp/golang/migrations'
           dev-url: 'mysql://root:pass@localhost:3306/dev'
           dir-name: 'app'
         env:
@@ -49,6 +49,6 @@ jobs:
       - uses: ariga/atlas-action/migrate/push@v1
         if: github.ref == 'refs/heads/master'
         with:
-          dir: 'file://migrations'
+          dir: 'file://webapp/golang/migrations'
           dev-url: 'mysql://root:pass@localhost:3306/dev'
           dir-name: 'app'
