--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -184,6 +184,18 @@ services:
      mysql:
       condition: service_healthy
 
+  # migrate:
+  #   image: arigaio/atlas:latest
+  #   command: >
+  #     migrate apply --dir file://webapp/golang/migrations --url mysql://root:root@mysql:3306/isuconp?charset=utf8mb4&parseTime=true&loc=Local --allow-dirty
+  #   networks:
+  #     - my_network
+  #   depends_on:
+  #     mysql:
+  #       condition: service_healthy
+  #   volumes:
+  #     - ./webapp/golang/migrations/:/migrations
+
 volumes:
   mysql:
   grafana_storage: {}
